[project]
name = "rohr"
version = "0.1.1"
description = "Build easy data processing pipelines in python."
authors = [
    {name = "Paul Frische", email = "paul@paulfrische.xyz"},
]
dependencies = ["pytest"]
requires-python = ">=3.4"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
